--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -846,3 +846,27 @@
   align-items: flex-end;
   flex-wrap: wrap;
 }
+
+#pjw-inner-frame {
+  position: fixed;
+  background-color: white;
+  z-index: 1200;
+  top: 0;
+  right: 0;
+  height: 100%;
+  min-width: min(100%, 600px);
+  width: 60%;
+  border-radius: 30px 0 0 30px;
+  border-width: 0;
+}
+
+#pjw-frame-mask {
+  display: none;
+  position: fixed;
+  background-color: rgba(0, 0, 0, .3);
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
