--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -439,6 +439,7 @@
   margin: 2px;
   border: 2px solid rgba(0, 0, 0, .5);
   border-radius: 18px;
+  box-sizing: content-box;
   height: 30px;
   display: flex;
   flex-direction: row;
@@ -756,7 +757,7 @@
 }
 
 .pjw-class-select-button__container {
-  margin-left: 15px;
+  margin-left: 12px;
 }
 
 .pjw-class-select-button__container > div {
@@ -771,6 +772,7 @@
 
 .pjw-class-select-button__status {
   font-size: 10px;
+  letter-spacing: 0;
 }
 
 .pjw-class-splitter {
