--- a/css/pjw-filter.css
+++ b/css/pjw-filter.css
@@ -130,6 +130,22 @@
   color: rgb(208, 196, 16);
 }
 
+.pjw-filter-advanced-list-item {
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+}
+
+.pjw-filter-advanced-list-delete {
+  font-size: 16px;
+  margin-right: 3px;
+}
+
+.pjw-filter-advanced-list-delete:hover {
+  color: rgba(0, 0, 0, 0.72) !important;
+}
+
 #frozen-icon {
   cursor: pointer;
 }
