--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -232,29 +232,34 @@
 
 .pjw-classlist-heading-button {
   background: linear-gradient(220deg, rgba(215, 10, 132), rgba(81, 18, 127));
+  min-width: 24px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  height: 60px;
-  padding: 5px 25px;
-  border-radius: 30px 0 0 30px;
-  margin: 0;
+  height: 48px;
+  border-radius: 24px;
+  padding: 5px 8px;
 }
 
 .pjw-classlist-heading-button > .mdc-button__ripple {
-  border-radius: 30px 0 0 30px;
+  border-radius: 24px 0 0 24px;
+}
+
+.pjw-classlist-heading-button > .material-icons-round {
+  margin: 0 4px;
+}
+
+.pjw-classlist-heading-refresh-button {
+  flex-direction: row;
+  border-radius: 24px 0 0 24px;
+  padding-right: 5px;
+  margin: 0;
 }
 
 .pjw-classlist-heading-switch-button {
-  border-radius: 0 30px 30px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  height: 60px;
-  padding: 5px 25px;
-  border-radius: 0 30px 30px 0;
+  flex-direction: row-reverse;
+  border-radius: 0 24px 24px 0;
   margin: 0;
   border-left: 2px solid white;
 }
@@ -269,17 +274,36 @@
 
 #pjw-classlist-search-field {
   min-width: 250px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 16px;
+  height: 48px;
+}
+
+#pjw-classlist-search-field.inputting .pjw-classlist-search-clear {
+  display: block;
+}
+
+#pjw-classlist-search-field.inputting .pjw-classlist-search-icon {
+  display: none;
+}
+
+.pjw-classlist-search-icon {
+  display: block;
 }
 
 .pjw-classlist-search-clear {
+  display: none;
+  cursor: pointer !important;
+  pointer-events: all !important;
   outline: none;
   transition: color .1s ease-out;
 }
 
 .pjw-classlist-search-clear:hover {
   color: rgba(0, 0, 0, 0.72) !important;
+}
+
+#pjw-classlist-search-input__label {
+  font-size: 14px;
 }
 
 /* Body */
@@ -408,7 +432,7 @@
 
 .pjw-class-teacher-icon {
   font-size: 14px;
-  margin: 0 4px;
+  margin-right: 4px;
 }
 
 .pjw-class-info-top {
