--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -97,11 +97,12 @@
 }
 
 .pjw-miniclass-sideinfo {
-  flex-grow: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .pjw-miniclass-num {
@@ -125,6 +126,7 @@
 
 .pjw-miniclass-operation {
   flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .pjw-miniclass-button:not(:disabled) {
@@ -310,7 +312,6 @@
 
 .pjw-classlist-body {
   width: 100%;
-  margin: 0 10px;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -763,20 +764,17 @@
 }
 
 .pjw-class-select-button {
-  min-width: 100px;
   background: linear-gradient(114deg, rgba(81, 18, 127, .9) 0%, rgba(215, 10, 132, .9) 100%);
   border-radius: 20px;
-  font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif !important;
   min-height: 40px;
+  min-width: 96px;
   margin: 4px;
+  padding: 0 12px 0 8px;
+  justify-content: space-around;
 }
 
 .pjw-class-select-button > .mdc-button__ripple {
   border-radius: 20px;
-}
-
-.pjw-class-select-button > .material-icons-round {
-  font-size: 20px;
 }
 
 .pjw-class-select-button.deselect {
@@ -786,10 +784,6 @@
 .pjw-class-select-button:disabled {
   color: rgba(0, 0, 0, .5);
   background: rgba(0, 0, 0, .3);
-}
-
-.pjw-class-select-button__container {
-  margin-left: 12px;
 }
 
 .pjw-class-select-button__container > div {
@@ -837,11 +831,33 @@
   font-size: 18px !important;
 }
 
+.pjw-class-menu-item .mdc-deprecated-list-item__text {
+  font-size: 14px;
+}
+
+.pjw-class-menu-item .mdc-deprecated-list-item__graphic {
+  margin-right: 20px;
+}
+
+.pjw-class-menu-item-icon {
+  justify-content: flex-start;
+  align-items: baseline;
+  font-size: 18px;
+}
+
+.pjw-class-menu-item-icon > span {
+  position: relative;
+  left: -3px;
+  top: -1px;
+  font-size: 12px;
+}
+
 .pjw-class-filter-button {
   z-index: 30;
 }
 
 .pjw-class-filter-menu {
+  min-width: 260px;
   z-index: 32;
 }
 
