Fix: Course time parsing & display

--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -451,6 +451,7 @@
 /* Weekly Calendar */
 
 .pjw-class-weekcal {
+  min-width: 158px;
   display: flex;
   flex-direction: column;
   align-items: center;
