Improvement: Weeks display in the course list is now implemented in SVG
The previous weeks display, under certain circumstances, could be unexpectedly wide due to font issues

--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -656,16 +656,18 @@
 }
 
 .pjw-class-container--compressed .pjw-class-weeknums {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
-.pjw-class-weeknums > span {
-  line-height: 14px;
-  vertical-align: middle;
+.pjw-class-weeknums > * {
   font-size: 7px;
   font-weight: bold;
   color: rgba(0, 0, 0, .6);
-  margin: 0 1px;
+  margin: 0;
+  -webkit-text-fill-color: transparent;
 }
 
 .pjw-class-weeknum-bar {
